objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIP_Points__c</fullName>
        <formula>IF( 
ISPICKVAL( Organizational_Entity__c ,"PAC Sales") &amp;&amp; ISPICKVAL( StageName , "Closed Won"), 
CASE($RecordType.Id, 
"012700000009eYw", 1.5, 
"012700000009eZ6", 1.5, 
"012700000009eXa",3, 
0) , 

IF( $RecordType.Id ="012700000009eXa" 
&amp;&amp; ISPICKVAL( StageName,"Closed Won") 
&amp;&amp; CloseDate &gt; Date(2010,01,01), 
IF( ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, "No"), 3.0, 
IF( ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, "Yes") &amp;&amp; ISPICKVAL(Referred_beyond_Data_Collection__c, "No"), 1.5, 
IF( ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, "Yes") &amp;&amp; ISPICKVAL(Referred_beyond_Data_Collection__c, "Yes"), 1.5, 
IF( ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, "") &amp;&amp; ISPICKVAL(Referred_beyond_Data_Collection__c, ""), 3.0, 
NULL )))), 

IF( 
AND( 
$RecordType.Id="012700000009eYw", ISPICKVAL( StageName,"Closed Won"),CloseDate &gt; Date(2011,10,01), 
ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, ""), ISPICKVAL(Referred_beyond_Data_Collection__c, "") 
), 
1.0, 
IF( 
AND( 
$RecordType.Id ="012700000009eZ6", ISPICKVAL( StageName,"Closed Won"),CloseDate &gt; Date(2010,01,01), CloseDate &lt; Date(2011,10,01) 
), 
0.25, 
IF( 
AND( 
$RecordType.Id="012700000009eZ6", ISPICKVAL(StageName,"Closed Won"),CloseDate &gt; Date(2012,08,30), 
OR(Ispickval(Organizational_Entity__c,"National Account Sales"),ispickval(Organizational_Entity__c,"NYC Sales")) 
), 
SB_SIP_Pts__c, 
0)))))</formula>
        <label>SIP Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIP_Referrer_Points__c</fullName>
        <description>SIP Points calculated for Referring Employees</description>
        <formula>if(and(ISPICKVAL(StageName, "Closed Won"), ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, "NO"), ISPICKVAL(Referred_beyond_Data_Collection__c , "NO")), null, 

If(and(ISPICKVAL(StageName, "Closed Won"), ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, "YES"), ISPICKVAL(Referred_beyond_Data_Collection__c , "NO")), CASE($RecordType.Name, "New Contract/CSA", 1.5,0),

IF(and(ISPICKVAL(StageName, "Closed Won"), ISPICKVAL(Was_this_Opportunity_Referred_to_you__c, "YES"), ISPICKVAL(Referred_beyond_Data_Collection__c , "YES")), CASE($RecordType.Name, "New Contract/CSA", 1.5,0),null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIP Referrer Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>